// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processWeek 골든 스냅샷 > 시상식 주간(50주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "winter",
      "kpopNews": [
        {
          "detail": "트렌드 피로도가 누적되며 세련된 정체성 유지가 중요해지고 있다.",
          "headline": "연말 결산: 올해 K-POP 키워드는 레트로와 Y2K",
          "id": "news-y1-w50-0",
          "type": "trend",
          "week": 50,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [
        {
          "activeWeeks": 0,
          "agency": "빅오션 뮤직",
          "debutYear": 1,
          "duration": 2,
          "fandom": 5382,
          "gender": "female",
          "global": 2202,
          "id": "event-rival-mega_rookie-w50",
          "industry": 56,
          "intensity": 81,
          "name": "에클라",
          "public": 65,
          "stats": {
            "dance": 77,
            "marketing": 75,
            "visual": 74,
            "vocal": 75,
          },
          "strengths": [
            "완성형 데뷔",
            "대형 마케팅",
            "초기 화제성",
          ],
          "triggerType": "mega_rookie",
          "type": "traditional",
          "weaknesses": [
            "초기 버블 이후 피로도",
          ],
        },
      ],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 1,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "cumulativeExpense": 946154,
      "cumulativeIncome": 0,
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 50,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 50,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "activeCommercialContracts": [],
      "activeProjects": [],
      "adContractsSigned": 0,
      "awardHistory": [],
      "campaignFailure": null,
      "campaignSeed": 0,
      "commercialWeekStreak": 0,
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "winter",
      "currentWeek": 51,
      "currentYear": 1,
      "emergencyFinancing": [],
      "fiveYearReview": null,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "insolvencyWeeks": 0,
      "investorComplianceCount": 0,
      "investorConditionProgress": {},
      "investorConditions": [
        {
          "deadlineWeeks": 78,
          "description": "1년 반 안에 최근 분기 영업 현금흐름 흑자 달성",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": 0,
        },
        {
          "deadlineWeeks": 156,
          "description": "3년 안에 누적 순수익 5억 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": 500000000,
        },
      ],
      "investorPenaltyActive": false,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "lastInvestorDemandWeek": null,
      "lastOpportunityWeek": 51,
      "lastStrategicExpansionWeek": null,
      "milestonesAchieved": [],
      "notifications": [
        {
          "id": "noti-y1-w50-0",
          "message": "이벤트 경쟁 그룹 등장: 에클라",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
      ],
      "saveRevision": 0,
      "strategicExpansion": {
        "fandom": 0,
        "global": 0,
        "production": 0,
      },
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "바이럴",
          "expiresAtWeek": 51,
          "id": "opportunity:viral-cover:w51",
          "lane": "opportunity",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "완성도보다 속도를 택해 알고리즘의 흐름을 이어 갑니다.",
              "effects": {
                "condition": -3,
                "global": 3,
                "public": 5,
                "stress": 5,
              },
              "id": "publish-follow-up",
              "label": "48시간 안에 후속편 공개",
              "tradeoff": "흐름을 타면 국내외에 얼굴을 알릴 수 있지만, 이번 주 팀 훈련을 걸러야 하는 강행군입니다.",
            },
            {
              "activityOverride": "individual",
              "description": "확산 속도는 포기하고 팀 색이 보이는 버전으로 만듭니다.",
              "effects": {
                "fandom": 2,
                "public": 2,
                "stress": 2,
              },
              "id": "polish-cover",
              "label": "멤버 유닛으로 다듬는다",
              "targetSelection": {
                "label": "커버 유닛 멤버",
                "max": 3,
                "min": 2,
              },
              "tradeoff": "확산력은 덜해도 팀의 색을 기억하는 팬이 남습니다. 참여 멤버는 이번 주 개인 일정으로 움직입니다.",
            },
          ],
          "summary": "연습실 클립의 반응이 커지고 있습니다. 관심이 식기 전에 후속 영상을 낼 수 있습니다.",
          "title": "커버 영상이 알고리즘을 탔다",
          "trigger": {
            "description": "커버 영상의 비정상적인 조회 상승 감지",
            "entityIds": [],
            "kind": "opportunity",
            "severity": "notice",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "selectedTargetTraineeIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60.06,
          "id": "staff-manager",
          "name": "김매니저",
          "potentialCap": 70,
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": [
      {
        "showId": "mma",
        "showName": "MMA",
        "winners": [],
      },
      {
        "showId": "mama",
        "showName": "MAMA",
        "winners": [],
      },
      {
        "showId": "goldenDisk",
        "showName": "골든디스크",
        "winners": [],
      },
    ],
    "comebackSettlement": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w50-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w50-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w50-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w50-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w50-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w50-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w50-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w50-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w50-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w50-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w50-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w50-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w50-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w50-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 1,
        "before": 2,
        "day": 6,
        "id": "y1-w50-20",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "global",
          "id": null,
          "kind": "fandom",
          "label": "해외 팬덤",
        },
      },
      {
        "after": 51,
        "before": 50,
        "day": 7,
        "id": "y1-w50-21",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "트렌드 피로도가 누적되며 세련된 정체성 유지가 중요해지고 있다.",
        "headline": "연말 결산: 올해 K-POP 키워드는 레트로와 Y2K",
        "id": "news-y1-w50-0",
        "type": "trend",
        "week": 50,
      },
    ],
    "promotionResults": [],
    "season": "winter",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [
      "이벤트 경쟁 그룹 등장: 에클라",
    ],
    "week": 50,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 일반 훈련 주간(5주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "spring",
      "kpopNews": [
        {
          "detail": "라이브 실력이 검증된 그룹에게 유리한 시즌이 시작된다.",
          "headline": "대학 축제 시즌 개막, 인기 그룹 섭외 경쟁 치열",
          "id": "news-y1-w5-0",
          "type": "event",
          "week": 5,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 1,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "cumulativeExpense": 946154,
      "cumulativeIncome": 0,
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 5,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 5,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "activeCommercialContracts": [],
      "activeProjects": [],
      "adContractsSigned": 0,
      "awardHistory": [],
      "campaignFailure": null,
      "campaignSeed": 0,
      "commercialWeekStreak": 0,
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "spring",
      "currentWeek": 6,
      "currentYear": 1,
      "emergencyFinancing": [],
      "fiveYearReview": null,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "insolvencyWeeks": 0,
      "investorComplianceCount": 0,
      "investorConditionProgress": {},
      "investorConditions": [
        {
          "deadlineWeeks": 78,
          "description": "1년 반 안에 최근 분기 영업 현금흐름 흑자 달성",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": 0,
        },
        {
          "deadlineWeeks": 156,
          "description": "3년 안에 누적 순수익 5억 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": 500000000,
        },
      ],
      "investorPenaltyActive": false,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "lastInvestorDemandWeek": null,
      "lastOpportunityWeek": 6,
      "lastStrategicExpansionWeek": null,
      "milestonesAchieved": [],
      "notifications": [],
      "saveRevision": 0,
      "strategicExpansion": {
        "fandom": 0,
        "global": 0,
        "production": 0,
      },
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "예능 섭외",
          "expiresAtWeek": 6,
          "id": "opportunity:variety-offer:w6",
          "lane": "opportunity",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "준비보다 현장감을 살려 대중에게 얼굴을 알립니다.",
              "effects": {
                "condition": -4,
                "public": 5,
                "stress": 7,
              },
              "id": "accept-live-recording",
              "label": "바로 녹화에 들어간다",
              "tradeoff": "대중에게 얼굴을 알릴 기회지만, 이번 주 팀 훈련을 걸러야 하고 멤버들 피로가 눈에 띄게 쌓입니다.",
            },
            {
              "activityOverride": "individual",
              "description": "노출은 줄이고 일부 멤버만 촬영에 투입합니다.",
              "effects": {
                "chemistry": -2,
                "public": 3,
                "stress": 3,
              },
              "id": "send-variety-line",
              "label": "예능 담당만 보낸다",
              "targetSelection": {
                "label": "출연할 예능 담당",
                "max": 1,
                "min": 1,
              },
              "tradeoff": "노출 효과는 줄어드는 대신 부담이 적습니다. 다녀오는 멤버는 이번 주 팀 합동 연습에서 빠집니다.",
            },
          ],
          "summary": "제작진이 팀의 낯선 매력을 짧은 코너에서 시험해 보고 싶어 합니다.",
          "title": "신인 관찰 예능의 러브콜",
          "trigger": {
            "description": "방송 제작진의 이번 주 한정 출연 제안",
            "entityIds": [],
            "kind": "opportunity",
            "severity": "notice",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "selectedTargetTraineeIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60.06,
          "id": "staff-manager",
          "name": "김매니저",
          "potentialCap": 70,
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "comebackSettlement": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w5-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w5-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w5-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w5-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w5-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w5-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w5-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w5-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w5-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w5-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w5-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w5-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w5-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w5-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 1,
        "before": 2,
        "day": 6,
        "id": "y1-w5-20",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "global",
          "id": null,
          "kind": "fandom",
          "label": "해외 팬덤",
        },
      },
      {
        "after": 6,
        "before": 5,
        "day": 7,
        "id": "y1-w5-21",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "라이브 실력이 검증된 그룹에게 유리한 시즌이 시작된다.",
        "headline": "대학 축제 시즌 개막, 인기 그룹 섭외 경쟁 치열",
        "id": "news-y1-w5-0",
        "type": "event",
        "week": 5,
      },
    ],
    "promotionResults": [],
    "season": "spring",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [],
    "week": 5,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 투자사 첫 평가 주간(VC 마감 78주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "fall",
      "kpopNews": [
        {
          "detail": "본 컴백 전에 화제성을 끌어올리는 브릿지 전략이 유행이다.",
          "headline": "서머 리믹스·선공개 싱글 발매 러시",
          "id": "news-y2-w26-0",
          "type": "trend",
          "week": 26,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "cute",
        "hotGenre": "cityPop",
        "hotMood": "retro",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 1,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "cumulativeExpense": 946154,
      "cumulativeIncome": 0,
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 26,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 26,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "activeCommercialContracts": [],
      "activeProjects": [],
      "adContractsSigned": 0,
      "awardHistory": [],
      "campaignFailure": null,
      "campaignSeed": 0,
      "commercialWeekStreak": 0,
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "fall",
      "currentWeek": 27,
      "currentYear": 2,
      "emergencyFinancing": [],
      "fiveYearReview": null,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "insolvencyWeeks": 0,
      "investorComplianceCount": 0,
      "investorConditionProgress": {
        "summit-quarterly": {
          "firstFailedWeek": 78,
          "penaltyApplied": false,
        },
      },
      "investorConditions": [
        {
          "deadlineWeeks": 78,
          "description": "1년 반 안에 최근 분기 영업 현금흐름 흑자 달성",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": 0,
        },
        {
          "deadlineWeeks": 156,
          "description": "3년 안에 누적 순수익 5억 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": 500000000,
        },
      ],
      "investorPenaltyActive": true,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "lastInvestorDemandWeek": 79,
      "lastOpportunityWeek": null,
      "lastStrategicExpansionWeek": null,
      "milestonesAchieved": [],
      "notifications": [
        {
          "id": "noti-y2-w26-0",
          "message": "투자사 조건 미달: 1년 반 안에 최근 분기 영업 현금흐름 흑자 달성. 6주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
          "title": "주간 알림",
          "type": "warning",
          "week": 26,
        },
      ],
      "saveRevision": 0,
      "strategicExpansion": {
        "fandom": 0,
        "global": 0,
        "production": 0,
      },
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "투자사",
          "id": "emergency-investor",
          "lane": "crisis",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "상업 활동을 늘리고 투자사 지표를 우선합니다.",
              "effects": {
                "fandomDisappointment": 10,
                "money": 20000000,
                "satisfaction": -8,
                "stress": 10,
              },
              "id": "comply",
              "label": "요구 수용",
              "tradeoff": "이번 한 번만 긴급 예산을 받습니다. 대신 팬 신뢰와 멤버 상태가 크게 나빠집니다.",
            },
            {
              "description": "기한 연장과 평가 기준 완화를 요청합니다.",
              "effects": {
                "industry": -4,
                "money": -20000000,
                "satisfaction": 2,
              },
              "id": "negotiate",
              "label": "조건 재협상",
              "tradeoff": "유예 기간이 3주 늘어납니다. 자문 비용과 업계 마찰을 감수해야 합니다.",
            },
            {
              "description": "지원 축소를 감수하고 팀의 방향성을 지킵니다.",
              "effects": {
                "fandomLoyalty": 4,
                "industry": -6,
                "money": -30000000,
                "satisfaction": 6,
              },
              "id": "defy",
              "label": "자체 방침 고수",
              "tradeoff": "멤버와 팬은 안도합니다. 대신 자체 예산을 투입해야 하고 업계 관계가 크게 악화됩니다.",
            },
          ],
          "summary": "투자 조건 미달 또는 누적 압박으로 투자사가 운영 방침 변경을 요구하고 있습니다.",
          "title": "투자사 개입 요구",
          "trigger": {
            "description": "투자사 압박 활성",
            "entityIds": [],
            "kind": "investor",
            "severity": "critical",
          },
        },
        {
          "category": "계약",
          "id": "recontract:t1:w79",
          "lane": "crisis",
          "options": [
            {
              "description": "처우를 2등급으로 올리고 계약금을 지급합니다.",
              "effects": {
                "money": -10000000,
                "satisfaction": 12,
              },
              "id": "raise",
              "label": "조건 인상",
              "targetTraineeIds": [
                "t1",
              ],
              "tradeoff": "계약금 10백만이 즉시 나갑니다. 인기와 회사의 지급 여력을 함께 반영한 금액입니다.",
            },
            {
              "description": "등급은 유지하되 일시 보너스를 지급합니다.",
              "effects": {
                "money": -5000000,
                "satisfaction": 5,
              },
              "id": "bonus",
              "label": "보너스로 달래기",
              "targetTraineeIds": [
                "t1",
              ],
              "tradeoff": "비용은 절반이지만 협상이 절반 주기로 다시 돌아옵니다.",
            },
            {
              "description": "지금 조건을 유지하자고 설득합니다.",
              "effects": {
                "satisfaction": -12,
              },
              "id": "freeze",
              "label": "동결",
              "targetTraineeIds": [
                "t1",
              ],
              "tradeoff": "만족도가 크게 떨어지고, 협상이 반년 안에 다시 돌아옵니다.",
            },
          ],
          "summary": "안정형 트레이니-t1의 처우 협상 시점이 왔습니다 (현재 1등급 · 개인 인기 0). 감정의 진폭이 작고 예측 가능합니다.",
          "title": "트레이니-t1 재계약",
          "trigger": {
            "description": "트레이니-t1 재계약 협상 도래",
            "entityIds": [
              "t1",
            ],
            "kind": "contract",
            "severity": "warning",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "selectedTargetTraineeIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60.06,
          "id": "staff-manager",
          "name": "김매니저",
          "potentialCap": 70,
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "comebackSettlement": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y2-w26-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y2-w26-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y2-w26-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y2-w26-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y2-w26-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y2-w26-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y2-w26-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y2-w26-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y2-w26-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y2-w26-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y2-w26-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y2-w26-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y2-w26-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y2-w26-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y2-w26-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y2-w26-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y2-w26-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y2-w26-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y2-w26-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y2-w26-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 1,
        "before": 2,
        "day": 6,
        "id": "y2-w26-20",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "global",
          "id": null,
          "kind": "fandom",
          "label": "해외 팬덤",
        },
      },
      {
        "after": 27,
        "before": 26,
        "day": 7,
        "id": "y2-w26-21",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "본 컴백 전에 화제성을 끌어올리는 브릿지 전략이 유행이다.",
        "headline": "서머 리믹스·선공개 싱글 발매 러시",
        "id": "news-y2-w26-0",
        "type": "trend",
        "week": 26,
      },
    ],
    "promotionResults": [],
    "season": "summer",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [
      "투자사 조건 미달: 1년 반 안에 최근 분기 영업 현금흐름 흑자 달성. 6주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
    ],
    "week": 26,
  },
}
`;
